[tool.poetry]
name = "denoising"
version = "0.1.0"
description = ""
authors = ["Shakya Majumdar <shakyamajumdar1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
torch = "^2.0.1"
ipykernel = "^6.25.0"
wfdb = "^4.1.2"
scikit-learn = "^1.3.0"
numba = "^0.57.1"
numpy = "1.24"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
scikit-image = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
